--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,16 @@
     <string name="published_date">Published date</string>
     <string name="berita_terkini_antara_news">Berita Terkini - ANTARA News</string>
     <string name="berita_terkini_dan_terpercaya_indonesia">Berita Terkini dan Terpercaya Indonesia</string>
+    <string name="sebuah_penelitian_menemukan_bahwa_pengobatan_tradisional_tiongkok_quot_tongxinluo_quot_dapat_memberikan_manfaat_ketika_digunakan_sebagai_terapi_tambahan_bagi_pasien_yang_baru_pulih_dari_serangan_jantung_medical_daily">
+        Sebuah penelitian menemukan bahwa pengobatan tradisional Tiongkok \"Tongxinluo\" dapat memberikan manfaat ketika
+        digunakan sebagai terapi tambahan bagi pasien yang baru pulih dari serangan jantung. Medical Daily
+        sebuah_penelitian_menemukan_bahwa_pengobatan_tradisional_tiongkok_quot_tongxinluo_quot_dapat_memberikan_manfaat_ketika_digunakan_sebagai_terapi_tambahan_bagi_pasien_yang_baru_pulih_dari_serangan_jantung_medical_daily">
+        Sebuah penelitian menemukan bahwa pengobatan tradisional Tiongkok \"Tongxinluo\" dapat memberikan manfaat ketika
+        digunakan sebagai terapi tambahan bagi pasien yang baru pulih dari serangan jantung. Medical Daily
+    </string>
+    <string name="selengkapnya_link_https_www_antaranews_com_berita_3816546_terapi_tradisional_tiongkok_ini_bantu_pulihkan_pasien_serangan_jantung">
+        Selengkapnya...
+        https://www.antaranews.com/berita/3816546/terapi-tradisional-tiongkok-ini-bantu-pulihkan-pasien-serangan-jantung
+    </string>
+    <string name="about_me">about me</string>
 </resources>
