--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="email">Email</string>
     <string name="name">Name</string>
     <string name="linkedin">Linkedin</string>
+    <string name="berita_terkini">Berita Terkini</string>
 </resources>
